crash and exploit protection

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <DIV CLASS="lobbyscreen" ID="lobbyscreen">
             <DIV CLASS="header">Emblitz</DIV>
             <DIV CLASS="join_input">
-                <INPUT ID="p_name" CLASS="name_input" TYPE="text" PLACEHOLDER="Name here...">
+                <INPUT ID="p_name" CLASS="name_input" MAXLENGTH="18" TYPE="text" PLACEHOLDER="Name here...">
                 <DIV CLASS="h_button_options">
                     <BUTTON CLASS="joinbutton jb_green" ID="joingame" ONCLICK="gameConnect(document.getElementById('p_name').value, document.getElementById('framecolor').value)">Play</BUTTON>
                     <BUTTON CLASS="joinbutton jb_gray" ID="joinprivate">Join Game</BUTTON>
